--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -75,8 +75,7 @@
                 <label for="location-dropdown" class="form-label title-color"><i
                         class="fa-solid fa-city" style="color: #63E6BE;"></i>
                     Thành phố,
-                    vị trí hoặc khách sạn
-                    name:</label>
+                    vị trí hoặc tên khách sạn   :</label>
                 <input
                     id="location-dropdown"
                     type="text"
@@ -353,8 +352,7 @@
                 <div class="flask-price">
                     <span class="flask-price-old" class="flask-price-old">1,000,000
                         đ</span>
-                    <span
-                        style="color: rgb(229, 62, 62); font-size: 24px;">700,000
+                    <span class="flask-price-sale">700,000
                         đ</span>
                 </div>
             </div>
@@ -382,8 +380,7 @@
                 <div class="flask-price">
                     <span class="flask-price-old">1,000,000
                         đ</span>
-                    <span
-                        style="color: rgb(229, 62, 62); font-size: 24px;">700,000
+                    <span class="flask-price-sale">700,000
                         đ</span>
                 </div>
             </div>
@@ -411,8 +408,7 @@
                 <div class="flask-price">
                     <span class="flask-price-old">1,000,000
                         đ</span>
-                    <span
-                        style="color: rgb(229, 62, 62); font-size: 24px;">700,000
+                    <span class="flask-price-sale">700,000
                         đ</span>
                 </div>
             </div>
@@ -440,8 +436,7 @@
                 <div class="flask-price">
                     <span class="flask-price-old">1,000,000
                         đ</span>
-                    <span
-                        style="color: rgb(229, 62, 62); font-size: 24px;">700,000
+                    <span class="flask-price-sale">700,000
                         đ</span>
                 </div>
             </div>
