--- a/app/templates/layout/footer.html
+++ b/app/templates/layout/footer.html
@@ -1,5 +1,5 @@
 <div class="bg-light">
-    <div class="container">
+    <div class="container mb-5">
         <div
             class=" p-2 d-flex flex-wrap flex-md-wrap flex-sm-wrap flex-lg-wrap flex-xl-wrap justify-content-between ">
             <div>
@@ -80,7 +80,5 @@
                     Instagram</i>
             </div>
         </div>
-
-        <br><br>
     </div>
 </div>
