--- a/app/templates/bookingDetail.html
+++ b/app/templates/bookingDetail.html
@@ -34,23 +34,35 @@
                         </div>
 
                         <div class="col-md-3">
-                              <p class="menu-item-p">Đánh giá của khách (1.177)</p>
+                              <p class="menu-item-p">Đánh giá của khách
+                                    (1.177)</p>
                         </div>
                   </div>
 
                   <div class="row mt-5" style="background-color: aqua;">
-                        <div class="col-md-8" style="background-color: thistle;">
-                              <div>phòng P112 <i class="fa-solid fa-star" style="color: #FFD43B;"></i></div>
+                        <div class="col-md-8"
+                              style="background-color: thistle;">
+                              <div>phòng P112
+                                    {% for i in range(1, 3) %}
+                                    <i class="fa-solid fa-star"   
+                                          style="color: #FFD43B;"></i>
+                                    {% endfor %}
+                                    <i class="fa-solid fa-thumbs-up" style="color: #74C0FC;"></i>
+                              </div>
                         </div>
 
                         <div class="col-md-4" style="background-color: tomato;">
-                              <i class="fa-regular fa-heart" style="color: #74C0FC;"></i>
-                              <i class="fa-solid fa-share" style="color: #74C0FC;"></i>
-                              <button class="btn btn-info">Đặt ngay</button>
+                              <i class="fa-regular fa-heart"
+                                    style="color: #74C0FC;"></i> 
+                              <i class="fa-solid fa-share"
+                                    style="color: #74C0FC;"></i>
+                              <button class="btn btn-info me-3 m-3">Đặt ngay</button>
+                              
+                              <span style="color: #1763b7;"> <i class="fa-solid fa-tag" style="color: #74C0FC;"></i> Chúng tôi luôn khớp giá</span>
                         </div>
                   </div>
             </div>
-            
+
       </div>
 </div>
 {% endblock %}
