--- a/app/templates/bookingDetail.html
+++ b/app/templates/bookingDetail.html
@@ -1,6 +1,5 @@
 {% extends 'layout/base.html' %}
 
-
 {% block title %}Booking detail{% endblock %}
 
 {% block css %}
@@ -45,105 +44,96 @@
                               style="background-color: thistle;">
                               <div>phòng P112
                                     {% for i in range(1, 3) %}
-                                    <i class="fa-solid fa-star"   
+                                    <i class="fa-solid fa-star"
                                           style="color: #FFD43B;"></i>
                                     {% endfor %}
-                                    <i class="fa-solid fa-thumbs-up" style="color: #74C0FC;"></i>
+                                    <i class="fa-solid fa-thumbs-up"
+                                          style="color: #74C0FC;"></i>
                               </div>
                         </div>
 
                         <div class="col-md-4" style="background-color: tomato;">
                               <i class="fa-regular fa-heart"
-                                    style="color: #74C0FC;"></i> 
+                                    style="color: #74C0FC;"></i>
                               <i class="fa-solid fa-share"
                                     style="color: #74C0FC;"></i>
-                              <button class="btn btn-info me-3 m-3">Đặt ngay</button>
-                              
-                              <span style="color: #1763b7;"> <i class="fa-solid fa-tag" style="color: #74C0FC;"></i> Chúng tôi luôn khớp giá</span>
+                              <button class="btn btn-info me-3 m-3">Đặt
+                                    ngay</button>
+
+                              <span style="color: #1763b7;"> <i
+                                          class="fa-solid fa-tag"
+                                          style="color: #74C0FC;"></i> Chúng tôi
+                                    luôn khớp giá</span>
                         </div>
                   </div>
             </div>
 
       </div>
 </div>
-=======
-{% block title %}Booking{% endblock %}
 
-{% block content %}
-<div class="my-container">
-    <div class="mt-3">
-        <div class="border-booking">
-            <div class="d-flex p-3">
-                <div class="item-2 p-1 me-3">
-                    <img src="{{ url_for('static', filename='image/ks.jpg') }}" alt="Khach san" class="mr-2 border-lg-image" width="100%">
-                </div>
-                <div class="d-flex flex-column item-7">
-                    <div class="d-flex  header-title">
-                        <div class="d-flex flex-column">
-                            <div >
-                                <h3 class="m-0 text-color-blue">Khach san</h3>
-                                <div class="stats"></div>
-                                <span></span>
-                            </div>
-                            <div>
-                                <span class="text-small">Cách trung tâm 3km</span>
-                            </div>
-                        </div>
-                        <div class="d-flex align-items-space">
-                            <div>
-                                <h5 class="m-0">Tuyệt hảo</h5>
-                                <span class="text-color-stap"><a href="#" style="all: unset;">99 đánh giá <i class="fa-solid fa-star" style="color: #FFD43B;"></i></a></span>
-                            </div>
-                            <div>
-                                <div>
-                                    <span class="border-three-corners text-color-write">9.5</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="mt-2">
-                        <div>
-                            <span  class="bg-color-green  text-color-write p-1 text-center rounded">Ưu đãi cuối năm</span>
-                        </div>
-                    </div>
-                    <div class="">
-                        <div class="d-flex header-title">
-                            <div class="mt-1">
-                                <h5>Phòng giường đôi nhìn ra biển</h5>
-                                <ul class="no-bullet m-0 p-0">
-                                    <li>
-                                        <span class="text-small">1 giường đôi lớn</span>
-                                    </li>
-                                    <li>
-                                        <div class="d-flex align-items-space">
-                                            <div><i class="fa-solid fa-check color-green"></i></div>
-                                            <div><span class="text-small color-green">Miễn phí hủy</span></div>
-                                        </div>
-                                        <div class="d-flex align-items-space">
-                                            <div><i class="fa-solid fa-check color-green"></i></div>
-                                            <div><span class="text-small color-green">Không cần thanh toán online - Thanh toán tại chỗ nghỉ</span></div>
-                                        </div>
-                                        <div>
-                                            <span class="text-small text-color-stap text-color-red">Chỉ còn 4 phòng với giá này trên trang của chúng tôi</span>
-                                        </div>
-                                    </li>
-                                </ul>
-                            </div>
-                            <div class="text-aline-right">
-                                <span class="text-small">1 đêm 2 người lớn</span>
-                                <br>
-                                <span class="text-color-discount">400.000 VND</span>
-                                <h3>320.000 VND</h3>
-                                <span class="text-small">Đã bao gồm thuế và phí</span>
-                                <hr>
-                                <input type="button" value="Đặt phòng" name="booking" class="btn btn-success" />
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+
+<div class="container mt-3">
+    <div class="align-items-center">
+        <div class="mb-0">
+            <h1>Oasia House Dalat</h1>
+        </div>
+        <div class="p-2">
+            <i class="fa-regular fa-map"></i>
+            <span>27 Hẻm Lê Hồng Phong, Đà Lạt, Việt Nam - </span>
+            <a href="https://www.google.com/maps/place/SwanBay/@10.7396431,106.8313967,17z/data=!3m1!4b1!4m6!3m5!1s0x317523d8d516b03b:0x6a81257a389d5015!8m2!3d10.7396378!4d106.8339716!16s%2Fg%2F11rdsx9yw7?entry=ttu&g_ep=EgoyMDI0MTIwMS4xIKXMDSoASAFQAw%3D%3D">Vị trí xuất sắc - hiển thị bản đồ</a>
         </div>
     </div>
 
+    <div class="row">
+        <div class="col-md-9 col-xs-12">
+            <div class="d-flex justify-content-between mb-2">
+                <div class="flex-image flex-column col-md-4 justify-content-between">
+                    <div class="rounded-pill">
+                        <img class="border-lg-image" src="{{ url_for('static', filename='image/ks.jpg') }}" width="95%"/>
+                    </div>
+                    <div class="rounded-pill pt-0 ">
+                        <img class="border-lg-image" src="{{ url_for('static', filename='image/ks.jpg') }}" width="95%"/>
+                    </div>
+                </div>
+                <div class="rounded-pill">
+                    <img class="border-lg-image" src="{{ url_for('static', filename='image/ks.jpg') }}" width="100%"/>
+                </div>
+            </div>
+            <div class="flex-image">
+                <div class="image-small">
+                    <button class=" p-0 border-none">
+                        <img class="border-sm-image" src="{{ url_for('static', filename='image/ks.jpg') }}" width="100%"/>
+                    </button>
+                </div>
+                <div class="image-small">
+                    <button class=" p-0 border-none">
+                        <img class="border-sm-image" src="{{ url_for('static', filename='image/ks.jpg') }}" width="100%"/>
+                    </button>
+                </div>
+                <div class="image-small">
+                    <button class=" p-0 border-none">
+                        <img class="border-sm-image" src="{{ url_for('static', filename='image/ks.jpg') }}" width="100%"/>
+                    </button>
+                </div>
+                <div class="image-small">
+                    <button class=" p-0 border-none">
+                        <img class="border-sm-image" src="{{ url_for('static', filename='image/ks.jpg') }}" width="100%"/>
+                    </button>
+                </div>
+                <div class="image-small">
+                    <button class=" p-0 border-none">
+                        <img class="border-sm-image" src="{{ url_for('static', filename='image/ks.jpg') }}" width="100%"/>
+                    </button>
+                </div>
+            </div>
+
+        </div>
+        <div class="col-md-3 col-xs-12"></div>
+    </div>
+
+    
+
 </div>
+
 {% endblock %}
+
