--- a/app/templates/layout/header.html
+++ b/app/templates/layout/header.html
@@ -3,7 +3,8 @@
     <a class="navbar-brand" href="/">
       Oasia Hotel
     </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -20,7 +21,8 @@
             {% if current_user.avatar %}
             <img src="{{ current_user.avatar }}" width="30" class="rounded-circle" alt="{{ current_user.avatar }}" />
             {% else %}
-            <img src="https://tse3.mm.bing.net/th?id=OIP.uYtN9PxIa7bdzjlYajELGQHaHP&pid=Api&P=0&h=220" width="30" class="rounded-circle" alt="avatar" />
+            <img src="https://tse3.mm.bing.net/th?id=OIP.uYtN9PxIa7bdzjlYajELGQHaHP&pid=Api&P=0&h=220" width="30"
+              class="rounded-circle" alt="avatar" />
             {% endif %}
           </a>
         </li>
@@ -35,10 +37,16 @@
           <a class="nav-link" href="/register">Đăng kí</a>
         </li>
 
-         <li class="nav-item">
+        <li class="nav-item">
           <a class="nav-link" href="/login">Đăng Nhập</a>
         </li>
 
+        <li class="nav-item">
+          <a class="nav-link" href="/cart">
+            <i class="fa-solid fa-cart-shopping"></i>
+            <span class="badge badge-success sum-product-cart p-1" id="cartCounter">0</span>
+          </a>
+        </li>
         {% endif %}
 
       </ul>
