--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -2,8 +2,13 @@
 
 {% block title %}Login{% endblock %}
 
+{% block css %}
+<link rel="stylesheet" href="{{ url_for('static', filename='css/login.css') }}"/>
+{% endblock %}
+
 {% block content %}
-<div class="container-login mt-5 mb-3">
+
+<div class="container-login mt-5 mb-3 opacity">
   {% if err_mgs %}
     <div class="alert alert-danger mt-3 text-center">
       <h6>{{ err_mgs }}</h6>
